# UniChat

./: .gitignore  Fine_Tuning_UniChat_LLM.ipynb  README.md  index.html  pyproject.toml  script.js
.chainlit/: config.toml
.env/: .env
Chatbot_flow/: index.py
Data_pipeline/: index.py
Dependencies/: requirements.txt
Main/: Main.py
Topic_Router/: topic_router.py
llm_pipeline/: pipeline.py
src/: requirements.txt
src/.chainlit/: config.toml
src/Data_csv/: Combined Admissions Data.csv
src/Data_pipeline/: index.py
src/Llm_pipeline/: __init__.py  pipeline.py
src/Main/: main.py
src/Topic_Router/: __init__.py  topic_router.py
vectorstore/db_faiss/: index.faiss  index.pkl
